# tablefind

./: README.md  pyproject.toml
src/tablefind/: main.py  parse.py  sheet_adapter.py  table_models.py  table_resolve.py
